@@ -1,37 +1,0 @@
-
- Building JASYPT-SPRING-SECURITY
- -------------------------
- 
- To build JASYPT-SPRING-SECURITY you will need Maven 2. You can get it at:
- 
-     http://maven.apache.org
-
- You will also need to have the JASYPT binaries in your maven 2 local 
- repository, or a working internet connection to allow maven to download them 
- from its central repositories.
-     
- Once installed, build and install the project executing, from the 
- JASYPT-SPRING-SECURITY project root folder:
- 
-     mvn clean:clean install
-     
- And you will get a fresh target/jasypt-spring-security-{version}.jar file.
- You will also get it installed in your local repository at:
- 
-     $M2_REPO/org/jasypt/jasypt-spring-security/{version}/jasypt-spring-security-{version}.jar
-
-
-
- Generating Javadoc for JASYPT-SPRING-SECURITY
- ---------------------------------------------
- 
- If you wish to generate the javadoc for JASYPT-SPRING-SECURITY, execute this
- from the JASYPT-SPRING-SECURITY root folder:
- 
-     mvn javadoc:javadoc
-     
- This will generate the javadoc documentation in HTML format in:
- 
-     target/site/apidocs
- 
- 
